--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ h1 {
 }
 h3 {
   color: #66bfbf;
+  font-size: 20px;
 }
 
 hr {
@@ -16,4 +17,16 @@ hr {
   border-width: 5px;
   height: 2px;
   width: 5%;
+}
+
+.sword {
+  background-color: red;
+}
+
+.cross {
+  border-radius: 100%;
+}
+
+.sword:hover {
+  background-color: green;
 }
